master/open-webui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: open-webui
  name: open-webui
  labels:
    app: open-webui
spec:
  selector:
    matchLabels:
      app: open-webui
  replicas: 1
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui
        image: registry.internal.durp.info/open-webui/open-webui:main
        imagePullPolicy: Always
        volumeMounts:
        - name: open-webui-pvc
          mountPath: /app/backend/data
        ports:
        - name: http
          containerPort: 8080
      volumes:
      - name: open-webui-pvc1
        persistentVolumeClaim:
          claimName: open-webui-pvc1
